[gd_scene load_steps=2 format=3 uid="uid://cmyprw1kivkg3"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_cexe2"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_cexe2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 1024.0

[node name="Resources" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IronLabel" type="Label" parent="VBoxContainer/Resources"]
layout_mode = 2
text = "IronOre"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddIron" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Add Iron"

[connection signal="ready" from="GameManager" to="GameManager" method="_on_ready"]
[connection signal="pressed" from="VBoxContainer/Buttons/AddIron" to="GameManager" method="add_iron_ore"]
